fix: support case sync over POST
